--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
 
     <string name="slide_4_title">Leave Management</string>
     <string name="slide_4_desc">Ask for a leave at one click.</string>
+
+    <string name="login_title">Login</string>
+    <string name="login_text">Dear user, kindly login using the institute email-id to access the application.</string>
+
 </resources>
